Added main section and header section

--- a/africa/africa.html
+++ b/africa/africa.html
@@ -12,20 +12,22 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../home.html">Home</a></li>
-            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
-            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
-            <li><a href="../oceania/oceania.html">Oceania</a></li>
-            <li><a href="../asia/asia.html">Asia</a></li>
-            <li><a href="../africa/africa.html">Africa</a></li>
-            <li><a href="../europe/europe.html">Europe</a></li>
-            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../home.html">Home</a></li>
+                <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+                <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+                <li><a href="../oceania/oceania.html">Oceania</a></li>
+                <li><a href="../asia/asia.html">Asia</a></li>
+                <li><a href="../africa/africa.html">Africa</a></li>
+                <li><a href="../europe/europe.html">Europe</a></li>
+                <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+            </ul>
+        </nav>
+    </header>
     
-    <div class="content">
+    <main>
         <h1>Africa</h1>
         <section class="geography">
             <h2>Geography</h2>
@@ -59,7 +61,7 @@
             </div>
             <div id="sahara" class="details">
                 <h2>Sahara</h2>
-                <p>The Sahara, the world’s largest hot desert, spans 8.5 million square kilometers, covering 25% of Africa. Its features include ergs (sand dunes), regs (gravel plains), hamadas (rock plateaus), and oases that support human life. Flora and fauna have adapted to the desert's arid conditions, such as camels conserving water and deep-rooted plants surviving scarce rainfall.</p>
+                <p>The Sahara, the world's largest hot desert, spans 8.5 million square kilometers, covering 25% of Africa. Its features include ergs (sand dunes), regs (gravel plains), hamadas (rock plateaus), and oases that support human life. Flora and fauna have adapted to the desert's arid conditions, such as camels conserving water and deep-rooted plants surviving scarce rainfall.</p>
                 <img src="africaGeographyImages/saharaImage.jpg" alt="Sahara Image">
                 <button class="close-button" onclick="hideDetails('sahara')">Close</button>
             </div>
@@ -71,7 +73,7 @@
             </div>
             <div id="ethiopianHighlands" class="details">
                 <h2>Ethiopian Highlands</h2>
-                <p>The Ethiopian Highlands, home to 80% of Africa’s tallest mountains, were formed by ancient volcanic activity. Unique wildlife like the endangered Ethiopian wolf and gelada baboon thrive here. Native plants include the Ethiopian rose and ensete, a banana-like plant. Human encroachment threatens local ecosystems.</p>
+                <p>The Ethiopian Highlands, home to 80% of Africa's tallest mountains, were formed by ancient volcanic activity. Unique wildlife like the endangered Ethiopian wolf and gelada baboon thrive here. Native plants include the Ethiopian rose and ensete, a banana-like plant. Human encroachment threatens local ecosystems.</p>
                 <img src="africaGeographyImages/ethiopianHighlandsImage.png" alt="Ethiopian Highlands Image">
                 <button class="close-button" onclick="hideDetails('ethiopianHighlands')">Close</button>
             </div>
@@ -89,7 +91,7 @@
             </div>
             <div id="rainforests" class="details">
                 <h2>Rainforests</h2>
-                <p>Africa’s rainforests boast immense biodiversity, including gorillas, forest elephants, and okapi. They also feature unique plants, with many endemic species. Indigenous groups like the Mbuti and Twa have lived sustainably in the rainforests for centuries, though their way of life faces increasing threats.</p>
+                <p>Africa's rainforests boast immense biodiversity, including gorillas, forest elephants, and okapi. They also feature unique plants, with many endemic species. Indigenous groups like the Mbuti and Twa have lived sustainably in the rainforests for centuries, though their way of life faces increasing threats.</p>
                 <img src="africaGeographyImages/rainforestImage.png" alt="Rainforest Image">
                 <button class="close-button" onclick="hideDetails('rainforests')">Close</button>
             </div>
@@ -101,7 +103,7 @@
             </div>
             <div id="southernAfrica" class="details">
                 <h2>Southern Africa</h2>
-                <p>Southern Africa, dominated by ancient bedrock, is rich in wildlife and plant diversity. Its reserves protect species like lions, rhinos, and gazelles, while generating jobs and revenue. The Cape Floral Region, home to 20% of Africa’s flora, is a global biodiversity hotspot.</p>
+                <p>Southern Africa, dominated by ancient bedrock, is rich in wildlife and plant diversity. Its reserves protect species like lions, rhinos, and gazelles, while generating jobs and revenue. The Cape Floral Region, home to 20% of Africa's flora, is a global biodiversity hotspot.</p>
                 <img src="africaGeographyImages/southernAfricaImage.jpg" alt="Southern Africa Image">
                 <button class="close-button" onclick="hideDetails('southernAfrica')">Close</button>
             </div>
@@ -221,7 +223,7 @@
                         <p>
                             Africa is home to thousands of indigenous languages and dialects, with each country, even the smallest, having its own linguistic diversity. 
                             Due to Africa's colonial history, many people also speak Creole or Pidgin versions of European languages like English, Portuguese, or French. 
-                            In Northern Africa, Arabic is widely spoken, while Swahili serves as the dominant language in East Africa, highlighting the continent’s rich and varied linguistic heritage.
+                            In Northern Africa, Arabic is widely spoken, while Swahili serves as the dominant language in East Africa, highlighting the continent's rich and varied linguistic heritage.
                         </p>
                         <img src="africaCultureImages/africaCulture.jpg" alt="Image of Culture in Africa" style="width:300px; height:auto;">
                 </div>
@@ -375,7 +377,7 @@
                 </div>
             </form>
         </div>            
-    </div>
+    </main>
 
     <script src="africa.js"></script>
     <script src="../home.js"></script>
