--- a/asia/asia.html
+++ b/asia/asia.html
@@ -10,24 +10,26 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../home.html">Home</a></li>
-            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
-            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
-            <li><a href="../oceania/oceania.html">Oceania</a></li>
-            <li><a href="../asia/asia.html">Asia</a></li>
-            <li><a href="../africa/africa.html">Africa</a></li>
-            <li><a href="../europe/europe.html">Europe</a></li>
-            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../home.html">Home</a></li>
+                <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+                <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+                <li><a href="../oceania/oceania.html">Oceania</a></li>
+                <li><a href="../asia/asia.html">Asia</a></li>
+                <li><a href="../africa/africa.html">Africa</a></li>
+                <li><a href="../europe/europe.html">Europe</a></li>
+                <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+            </ul>
+        </nav>
+    </header>
     
-    <div class="content">
+    <main>
         <h1>Asia</h1>
         <section class="geography">
             <h2>Geography</h2>
-            <p>Asia, the largest continent, covers 30% of Earth’s land area and is home to 60% of the world’s population. It is characterized by a diverse landscape divided into five major physical regions: mountain systems, plateaus, plains and deserts, freshwater environments, and saltwater environments. Each region shapes the continent's unique geography, culture, and ecosystems, making Asia a key player in global history and ecological significance.</p>
+            <p>Asia, the largest continent, covers 30% of Earth's land area and is home to 60% of the world's population. It is characterized by a diverse landscape divided into five major physical regions: mountain systems, plateaus, plains and deserts, freshwater environments, and saltwater environments. Each region shapes the continent's unique geography, culture, and ecosystems, making Asia a key player in global history and ecological significance.</p>
             <div class="map-container">
                 <img src="asiaGeographyImages/asiaMap2.png" alt="Antarctica Map" class="map-image">
                 <div class="region-button" style="top: 40%; left: 30%;" onclick="showDetails('border')">
@@ -69,19 +71,19 @@
             </div>
             <div id="plains" class="details">
                 <h2>Plains, Steppes, and Deserts</h2>
-                <p>The West Siberian Plain, one of the worlds flattest areas, features vast swamps and supports reindeer herding communities. Central Asia’s steppes, including Mongolia’s arid and desert zones, transition to the Gobi Desert in the south. The Rub’ al Khali, or Empty Quarter, is the largest sand desert, spanning Saudi Arabia and neighboring countries, with archaeological evidence of prehistoric life.</p>
+                <p>The West Siberian Plain, one of the worlds flattest areas, features vast swamps and supports reindeer herding communities. Central Asia's steppes, including Mongolia's arid and desert zones, transition to the Gobi Desert in the south. The Rub' al Khali, or Empty Quarter, is the largest sand desert, spanning Saudi Arabia and neighboring countries, with archaeological evidence of prehistoric life.</p>
                 <img src="asiaGeographyImages/westSiberianPlain.png" alt="Plains Image">
                 <button class="close-button" onclick="hideDetails('plains')">Close</button>
             </div>
             <div id="freshwater" class="details">
                 <h2>Freshwater Regions</h2>
-                <p>Asia’s freshwater systems are crucial to its ecology and civilizations. Lake Baikal in Russia is the world’s deepest and oldest lake, holding 20% of the planet’s unfrozen fresh water. Rivers like the Yangtze in China, the longest in Asia, support vast populations and economic activity, while the Tigris and Euphrates, central to ancient Mesopotamian civilizations, face modern threats from damming and desertification.</p>
+                <p>Asia's freshwater systems are crucial to its ecology and civilizations. Lake Baikal in Russia is the world's deepest and oldest lake, holding 20% of the planet's unfrozen fresh water. Rivers like the Yangtze in China, the longest in Asia, support vast populations and economic activity, while the Tigris and Euphrates, central to ancient Mesopotamian civilizations, face modern threats from damming and desertification.</p>
                 <img src="asiaGeographyImages/freshwaterImage.jpg" alt="Freshwater region Image">
                 <button class="close-button" onclick="hideDetails('freshwater')">Close</button>
             </div>
             <div id="saltwater" class="details">
                 <h2>Saltwater Regions</h2>
-                <p>Asia’s saltwater bodies influence its geography and economy. The Persian Gulf, rich in oil reserves, borders several countries and drives geopolitical tensions. The Bay of Bengal, the world’s largest bay, supports diverse ecosystems and sacred rivers like the Ganges, while the icy Sea of Okhotsk presents navigation challenges during winter.</p>
+                <p>Asia's saltwater bodies influence its geography and economy. The Persian Gulf, rich in oil reserves, borders several countries and drives geopolitical tensions. The Bay of Bengal, the world's largest bay, supports diverse ecosystems and sacred rivers like the Ganges, while the icy Sea of Okhotsk presents navigation challenges during winter.</p>
                 <img src="asiaGeographyImages/bayOfBengal.jpg" alt="Freshwater region Image">
                 <button class="close-button" onclick="hideDetails('saltwater')">Close</button>
             </div>
@@ -188,7 +190,7 @@
                             The art and culture of East Asia, including China, Japan, Korea, and Mongolia, are unified by powerful philosophical systems such as Confucianism, 
                             Daoism, and various forms of Buddhism. 
                             These traditions have shaped artistic practices such as calligraphy, landscape painting, and architecture. 
-                            The classical Chinese language and traditional scripts have also been central to East Asian art. Meanwhile, Southeast Asia’s art is 
+                            The classical Chinese language and traditional scripts have also been central to East Asian art. Meanwhile, Southeast Asia's art is 
                             influenced by a mix of Animism, Theravada Buddhism, Islam, Christianity, and Hinduism, reflecting its rich cultural diversity.
                         </p>
                         <p>
@@ -200,8 +202,8 @@
                         </p>
                         <p>
                             Asian art is known for its intricate and beautiful works, including ritual bronzes, ceramics, textiles, and jade carvings, as well as magnificent temples, shrines, and pagodas. 
-                            Iconic works such as Fan Kuan’s Travellers among Mountains and Streams, Katsushika Hokusai’s Thirty-six Views of Mt Fuji, 
-                            and Basawan’s Akbar Restraining the Enraged Elephant exemplify the enduring cultural significance of Asian art. 
+                            Iconic works such as Fan Kuan's Travellers among Mountains and Streams, Katsushika Hokusai's Thirty-six Views of Mt Fuji, 
+                            and Basawan's Akbar Restraining the Enraged Elephant exemplify the enduring cultural significance of Asian art. 
                             In recent decades, Asian contemporary art has gained international recognition, fueled by the rise of regional art biennials, contemporary art museums, 
                             and global artists such as Cai Guo-Qiang, Miwa Yanagi, Suh Do-Ho, and Rirkrit Tiravanija, highlighting the continued evolution and global impact of Asian art.
                         </p>
@@ -385,7 +387,7 @@
             </form>
         </div>
         
-    </div>
+    </main>
 
     <script src="asia.js"></script>
     <script src="../home.js"></script>
