--- a/europe/europe.html
+++ b/europe/europe.html
@@ -10,19 +10,21 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../home.html">Home</a></li>
-            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
-            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
-            <li><a href="../oceania/oceania.html">Oceania</a></li>
-            <li><a href="../asia/asia.html">Asia</a></li>
-            <li><a href="../africa/africa.html">Africa</a></li>
-            <li><a href="../europe/europe.html">Europe</a></li>
-            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
-        </ul>
-    </nav>
-    <div class="content">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../home.html">Home</a></li>
+                <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+                <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+                <li><a href="../oceania/oceania.html">Oceania</a></li>
+                <li><a href="../asia/asia.html">Asia</a></li>
+                <li><a href="../africa/africa.html">Africa</a></li>
+                <li><a href="../europe/europe.html">Europe</a></li>
+                <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
         <h1>Europe</h1>
         <section class="geography">
             <h2>Geography</h2>
@@ -49,7 +51,7 @@
         </div>
         <div id="northPlains" class="details">
             <h2>North European Plain</h2>
-            <p>The North European Plain spans from the southern United Kingdom to Russia, encompassing parts of France, Belgium, the Netherlands, Germany, Denmark, Poland, the Baltic states, and Belarus. Most of this plain lies below 152 meters (500 feet) in elevation and features navigable rivers such as the Rhine, Elbe, and Vistula. Its fertile soil and favorable climate have supported dense populations and agricultural development, making it one of Europe’s most populous and economically important regions.</p>
+            <p>The North European Plain spans from the southern United Kingdom to Russia, encompassing parts of France, Belgium, the Netherlands, Germany, Denmark, Poland, the Baltic states, and Belarus. Most of this plain lies below 152 meters (500 feet) in elevation and features navigable rivers such as the Rhine, Elbe, and Vistula. Its fertile soil and favorable climate have supported dense populations and agricultural development, making it one of Europe's most populous and economically important regions.</p>
             <img src="europeGeographyImages/rhineRiver.png" alt="Rhine River in the North European Plains Image">
             <button class="close-button" onclick="hideDetails('northPlains')">Close</button>
         </div>
@@ -61,7 +63,7 @@
         </div>
         <div id="alpine" class="details">
             <h2>Alpine Mountains</h2>
-            <p>The Alpine Mountains encompass southern Europe, including the Alps, Pyrenees, Apennines, and Carpathians. This region is defined by high elevations, steep slopes, and rugged plateaus. Europe’s highest peak, Mount Elbrus in the Caucasus Mountains, reaches 5,642 meters (18,510 feet). The area also includes active volcanoes like Mount Etna and Mount Vesuvius in Italy, contributing to its dynamic landscape.</p>
+            <p>The Alpine Mountains encompass southern Europe, including the Alps, Pyrenees, Apennines, and Carpathians. This region is defined by high elevations, steep slopes, and rugged plateaus. Europe's highest peak, Mount Elbrus in the Caucasus Mountains, reaches 5,642 meters (18,510 feet). The area also includes active volcanoes like Mount Etna and Mount Vesuvius in Italy, contributing to its dynamic landscape.</p>
             <img src="europeGeographyImages/alps.jpg" alt="Alpine Mountains Image">
             <button class="close-button" onclick="hideDetails('alpine')">Close</button>
         </div>
@@ -121,7 +123,7 @@
             <p>
                 Europe's cultural heritage is a rich and diverse blend of natural, built, and archaeological sites, as well as museums, 
                 monuments, artworks, historic cities, and various forms of creative expression, such as literature, music, and audiovisual works. 
-                Additionally, Europe’s cultural heritage plays a vital role in revitalizing urban and rural areas and supporting sustainable tourism.
+                Additionally, Europe's cultural heritage plays a vital role in revitalizing urban and rural areas and supporting sustainable tourism.
             </p>
             <p>
                 Select a dropdown below to learn more about Europe's Culture!
@@ -186,7 +188,7 @@
                     <div class="dropdown-content">
                         <p>
                             Europe's religious culture is shaped by a deep history of faith traditions and divisions that continue to influence its societies today. Christianity dominates the religious landscape, 
-                            with most Europeans adhering to one of three main branches: Roman Catholicism, Protestantism, and Eastern Orthodoxy. These divisions stem from historic schisms in Christianity’s evolution. 
+                            with most Europeans adhering to one of three main branches: Roman Catholicism, Protestantism, and Eastern Orthodoxy. These divisions stem from historic schisms in Christianity's evolution. 
                             Roman Catholicism is prevalent in the western and southwestern parts of the continent, while Protestantism is dominant in the north, and Eastern Orthodoxy is most common in the east and southeast. 
                             The first major split occurred in the 4th century when the Roman Empire divided into western and eastern segments, a division that formalized religious leadership between the bishop of Rome and the patriarch of Constantinople. 
                             The second significant schism arose in the 16th century with the Protestant Reformation, initiated by Martin Luther, leading to the spread of Protestantism in Germanic-speaking regions such as 
@@ -356,7 +358,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </main>
 
     <script src="europe.js"></script>
     <script src="../home.js"></script>
