--- a/home.html
+++ b/home.html
@@ -10,23 +10,25 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="northAmerica/northAmerica.html">North America</a></li>
-            <li><a href="southAmerica/southAmerica.html">South America</a></li>
-            <li><a href="oceania/oceania.html">Oceania</a></li>
-            <li><a href="asia/asia.html">Asia</a></li>
-            <li><a href="africa/africa.html">Africa</a></li>
-            <li><a href="europe/europe.html">Europe</a></li>
-            <li><a href="antarctica/antarctica.html">Antarctica</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="northAmerica/northAmerica.html">North America</a></li>
+                <li><a href="southAmerica/southAmerica.html">South America</a></li>
+                <li><a href="oceania/oceania.html">Oceania</a></li>
+                <li><a href="asia/asia.html">Asia</a></li>
+                <li><a href="africa/africa.html">Africa</a></li>
+                <li><a href="europe/europe.html">Europe</a></li>
+                <li><a href="antarctica/antarctica.html">Antarctica</a></li>
+            </ul>
+        </nav>
+    </header>
        
-    <div class="content" style="background-image: url('earth.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <main style="background-image: url('earth.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="welcome" style="background-color: #2c3e50;">
             <h1>Continental Breakfast</h1>
-            <h3>Welcome to the Continental Breakfast homepage! Explore the continents through the navigation menu above!</h3>
+            <h3>Welcome to the Continental Breakfast homepage! The website is for any person regardless of age or background who wishes to know more about the world they live in! Explore the continents through the navigation menu above!</h3>
             <h3>Below are some quick facts about the Earth:</h3>                   
         </div>
         <div class="earthTable">
@@ -77,7 +79,7 @@
                 </tbody>
             </table> 
         </div>  
-    </div>
+    </main>
 
     <script src="home.js"></script>
 </body>
