--- a/northAmerica/northAmerica.html
+++ b/northAmerica/northAmerica.html
@@ -10,24 +10,26 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../home.html">Home</a></li>
-            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
-            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
-            <li><a href="../oceania/oceania.html">Oceania</a></li>
-            <li><a href="../asia/asia.html">Asia</a></li>
-            <li><a href="../africa/africa.html">Africa</a></li>
-            <li><a href="../europe/europe.html">Europe</a></li>
-            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../home.html">Home</a></li>
+                <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+                <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+                <li><a href="../oceania/oceania.html">Oceania</a></li>
+                <li><a href="../asia/asia.html">Asia</a></li>
+                <li><a href="../africa/africa.html">Africa</a></li>
+                <li><a href="../europe/europe.html">Europe</a></li>
+                <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+            </ul>
+        </nav>
+    </header>
     
-    <div class="content">
+    <main>
         <h1>North America</h1>
         <section class="geography">
             <h2>Geography</h2>
-            <p>North America, the third-largest continent, spans from the Aleutian Islands in the northwest to the Isthmus of Panama in the south. It includes Greenland in the northeast and the islands of the Caribbean Sea and western North Atlantic. Its diverse physical geography comprises five major regions: the mountainous west, the Great Plains, the Canadian Shield, the varied eastern region, and the Caribbean. These regions contain nearly all the world’s biomes, from deserts and grasslands to tundras and coral reefs.</p>
+            <p>North America, the third-largest continent, spans from the Aleutian Islands in the northwest to the Isthmus of Panama in the south. It includes Greenland in the northeast and the islands of the Caribbean Sea and western North Atlantic. Its diverse physical geography comprises five major regions: the mountainous west, the Great Plains, the Canadian Shield, the varied eastern region, and the Caribbean. These regions contain nearly all the world's biomes, from deserts and grasslands to tundras and coral reefs.</p>
             <div class="map-container">
                 <img src="northAmericaGeographyImages/northAmericaMap.png" alt="Antarctica Map" class="map-image">
                 <div class="region-button" style="top: 65%; left: 45%;" onclick="showDetails('westernRegion')">
@@ -67,13 +69,13 @@
             </div>
             <div id="canadianSheild" class="details">
                 <h2>Canadian Sheild</h2>
-                <p>The Canadian Shield, a vast plateau of ancient rock, stretches across eastern, central, and northwestern Canada. Its tundra biome is marked by permafrost, which keeps moisture near the surface, enabling vegetation like lichens and mosses to thrive in the Arctic climate. This supports wildlife such as caribou and musk oxen. During summer, the thaw creates shallow lakes and bogs that add to the region’s unique biodiversity.</p>
+                <p>The Canadian Shield, a vast plateau of ancient rock, stretches across eastern, central, and northwestern Canada. Its tundra biome is marked by permafrost, which keeps moisture near the surface, enabling vegetation like lichens and mosses to thrive in the Arctic climate. This supports wildlife such as caribou and musk oxen. During summer, the thaw creates shallow lakes and bogs that add to the region's unique biodiversity.</p>
                 <img src="northAmericaGeographyImages/canadianShield.jpg" alt="Lake in the Canadian Shield Image">
                 <button class="close-button" onclick="hideDetails('canadianSheild')">Close</button>
             </div>
             <div id="easternRegion" class="details">
                 <h2>Eastern Region</h2>
-                <p>The eastern region includes the Appalachian Mountains and the Atlantic coastal plain. The Appalachians, among North America’s oldest mountains, have been mined for coal and minerals for centuries.</p>
+                <p>The eastern region includes the Appalachian Mountains and the Atlantic coastal plain. The Appalachians, among North America's oldest mountains, have been mined for coal and minerals for centuries.</p>
                 <img src="northAmericaGeographyImages/appalachianMountains.jpg" alt="Appalachian Mountains Image">
                 <p>The coastal plain features wetlands like the Everglades, a biologically diverse system of sawgrass marshes, cypress trees, and mangroves. The Everglades provide habitats for alligators and wading birds, making it an essential ecosystem for wildlife conservation.</p>
                 <img src="northAmericaGeographyImages/everglades.jpg" alt="Everglades Image">
@@ -91,9 +93,9 @@
                 <img src="northAmericaGeographyImages/denaliNationalPark.jpg" alt="Denali National Park Alaska Image">
                 <p>The Great Lakes, the largest freshwater system on Earth.</p>
                 <img src="northAmericaGeographyImages/niagraFalls.jpg" alt="Niagra Falls Image">
-                <p>Other highlights include Yellowstone National Park’s geysers.</p>
+                <p>Other highlights include Yellowstone National Park's geysers.</p>
                 <img src="northAmericaGeographyImages/geiserYellowstone.jpg" alt="Yellowston National Park Image">
-                <p>Canada’s Bay of Fundy with the world’s highest tides.</p>
+                <p>Canada's Bay of Fundy with the world's highest tides.</p>
                 <img src="northAmericaGeographyImages/bayOfFundy.jpg" alt="Bay of Fundy Image">
                 <p>And the Mississippi River, which drains parts of 31 U.S. states.</p>
                 <img src="northAmericaGeographyImages/mississippiRiver.jpg" alt="Mississippi River image">
@@ -202,10 +204,10 @@
                             sustainable, community-based industries, which have become increasingly important in a globalized world.
                         </p>
                         <p>
-                            Tourism is another major economic driver in contemporary North America, particularly in the Caribbean region, where pristine tropical environments attract millions of visitors each year. The Caribbean’s coral reefs, 
-                            one of the world’s premier diving destinations, draw approximately 20 million tourists annually. In response to environmental concerns, there is a growing movement towards sustainable tourism, which emphasizes the 
+                            Tourism is another major economic driver in contemporary North America, particularly in the Caribbean region, where pristine tropical environments attract millions of visitors each year. The Caribbean's coral reefs, 
+                            one of the world's premier diving destinations, draw approximately 20 million tourists annually. In response to environmental concerns, there is a growing movement towards sustainable tourism, which emphasizes the 
                             importance of local businesses and ecosystems over large multinational hotel chains. The Caribbean Alliance for Sustainable Tourism, for example, advocates for the responsible management of natural resources, 
-                            and ecotourism promotes travel to natural destinations with minimal environmental impact, ensuring that tourism benefits local communities without compromising the region’s natural beauty.
+                            and ecotourism promotes travel to natural destinations with minimal environmental impact, ensuring that tourism benefits local communities without compromising the region's natural beauty.
                         </p>
                         <p>
                             North America's multicultural history is another defining characteristic of its contemporary culture. For centuries, immigrants from across Europe, Asia, Africa, and South America have shaped the continent, 
@@ -221,7 +223,7 @@
                 <div class="dropdown-header"><h4>North America's Food Culture</h4></div>
                     <div class="dropdown-content">
                         <p>
-                            North America's food culture is deeply rooted in the agricultural innovations of its Indigenous peoples, whose contributions have shaped diets around the world. About 60% of today’s global diet derives 
+                            North America's food culture is deeply rooted in the agricultural innovations of its Indigenous peoples, whose contributions have shaped diets around the world. About 60% of today's global diet derives 
                             from foods native to the Americas, including staples like potatoes, tomatoes, corn, and chocolate. Native peoples cultivated more than 300 food crops long before European colonization, demonstrating 
                             remarkable skill in plant breeding and adaptation. For example, Indigenous communities near the U.S.-Canadian border developed a variety of corn that matured within 60 days to thrive in short growing seasons. 
                             Their advanced farming techniques laid the foundation for modern agriculture.
@@ -393,7 +395,7 @@
             </form>
         </div>
         
-    </div>
+    </main>
 
     <script src="northAmerica.js"></script>
     <script src="../home.js"></script>
